# ALPR_NANO

./: .gitignore  CMakeLists.txt  README.md  URLs.json  installation  run.sh  spot_config.txt  ui_mainui.h  userInfo.json  whiteList.json
ALPRUI/: ALPRUI.pro  camerathread.cpp  camerathread.h  main.hpp  mainui.cpp  mainui.h  mainui.ui
ALPR_Cpp/: CMakeCache.txt  CMakeLists.txt  Helpers.cpp  Helpers.h  README.md  aug.hpp  cameraStreamer.hpp  car_color_classifier.hpp  check_polygon.hpp  client.hpp  cmn.cpp  config.hpp  craft.hpp  craft_onnx_utils.hpp  detgenerator.cpp  draw_spots.hpp  dtc.hpp  futrextr.hpp  genr.hpp  gpio.cpp  gpu_envs.hpp  installation  license_utils.hpp  macros.h  main.cpp  main.hpp  main_test.cpp  nms.hpp  nms_vision.hpp  ocr.hpp  ocr_test.cpp  predictor.hpp  run_alpr.hpp  run_alpr_multithreading.hpp  spot_config.txt  transforms.hpp  trnsfrmkl.hpp  utils.hpp  yolov5.hpp
ALPR_UI/: ALPR_UI.pro  Makefile  camerathread.h  main.cpp  mainui.cpp  mainui.h  mainui.ui  moc_mainui.cpp  stream.h  ui_mainui.h
ALPR_UI/opencv2/: calib3d.hpp  core.hpp  features2d.hpp  flann.hpp  highgui.hpp  imgcodecs.hpp  imgproc.hpp  ml.hpp  objdetect.hpp  opencv.hpp  photo.hpp  stitching.hpp  video.hpp  videoio.hpp
ALPR_UI/opencv2/calib3d/: calib3d.hpp  calib3d_c.h
ALPR_UI/opencv2/core/: base.hpp  core.hpp  core_c.h  cuda.hpp  cuda.inl.hpp  cuda_stream_accessor.hpp  cvdef.h  cvstd.hpp  cvstd_wrapper.hpp  eigen.hpp  fast_math.hpp  mat.hpp  matx.hpp  neon_utils.hpp  ocl.hpp  opengl.hpp  optim.hpp  persistence.hpp  saturate.hpp  simd_intrinsics.hpp  sse_utils.hpp  traits.hpp  types.hpp  types_c.h  utility.hpp  va_intel.hpp  vsx_utils.hpp
ALPR_UI/opencv2/core/cuda/: common.hpp  scan.hpp
ALPR_UI/opencv2/core/hal/: hal.hpp  intrin.hpp  intrin_cpp.hpp  intrin_neon.hpp  intrin_sse.hpp  intrin_vsx.hpp
ALPR_UI/opencv2/core/opencl/: ocl_defs.hpp
ALPR_UI/opencv2/core/utils/: logtag.hpp
ALPR_UI/opencv2/dnn/: dnn.hpp
ALPR_UI/opencv2/features2d/: features2d.hpp
ALPR_UI/opencv2/features2d/hal/: interface.h
ALPR_UI/opencv2/flann/: flann.hpp  general.h  miniflann.hpp  timer.h
ALPR_UI/opencv2/highgui/: highgui.hpp  highgui_c.h
ALPR_UI/opencv2/imgcodecs/: imgcodecs.hpp  ios.h
ALPR_UI/opencv2/imgproc/: imgproc.hpp  imgproc_c.h  types_c.h
ALPR_UI/opencv2/imgproc/hal/: hal.hpp
ALPR_UI/opencv2/ml/: ml.hpp
ALPR_UI/opencv2/objdetect/: objdetect.hpp
ALPR_UI/opencv2/photo/: cuda.hpp  photo.hpp
ALPR_UI/opencv2/stitching/: warpers.hpp
ALPR_UI/opencv2/stitching/detail/: autocalib.hpp  blenders.hpp  camera.hpp  exposure_compensate.hpp  matchers.hpp  motion_estimators.hpp  seam_finders.hpp  timelapsers.hpp  util.hpp  util_inl.hpp  warpers.hpp  warpers_inl.hpp
ALPR_UI/opencv2/video/: background_segm.hpp  tracking.hpp  video.hpp
ALPR_UI/opencv2/videoio/: cap_ios.h  videoio.hpp  videoio_c.h
havai/: havai.pro
